resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-13.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
class resym_test::InterfaceImplClass : public resym_test::PureVirtualClass { /* Size=0x8 */
  /* 0x0000: fields for resym_test::PureVirtualClass */
  
  private: virtual int32_t InterfaceVirtual();
  public: InterfaceImplClass(resym_test::InterfaceImplClass&);
  public: InterfaceImplClass(const resym_test::InterfaceImplClass&);
  public: InterfaceImplClass();
  public: resym_test::InterfaceImplClass& operator=(resym_test::InterfaceImplClass&);
  public: resym_test::InterfaceImplClass& operator=(const resym_test::InterfaceImplClass&);
};
