resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-18.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
union resym_test::BitFieldsTest4 { /* Size=0x2 */
  struct {
    uint16_t b1 : 1;
    uint16_t b2 : 5;
    uint16_t b3 : 10;
  };
};
